thread.c: queue_copy

* ext/thread/thread.c (queue_copy): copy queue members.
  [ruby-core:66128] [Bug #10485]